testdata/baselines/reference/submodule/conformance/moduleExportAlias3.errors.txt
bug24062.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== bug24062.js (1 errors) ====
    // #24062
    class C {
    }
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        C
    };
    